@@ -7,6 +7,8 @@ require "deep-connect/deep-connect"
 
 require "fairy/node"
 
+$0 = "fairy node #{ARGV.join(' ')}"
+
 Thread.abort_on_exception = Fairy::CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION
 
 if Fairy::CONF.USE_RESOLV_REPLACE
@@ -17,8 +19,9 @@ master_host = Fairy::CONF.MASTER_HOST
 master_port = Fairy::CONF.MASTER_PORT
 id = nil
 opt = OptionParser.new do |opt|
-  opt.on("--master_host=VAL"){|val| master_host = val}
-  opt.on("--master_port=VAL"){|val| master_port = val}
+  opt.on("-m VAL"){|val| master_host = val}
+  opt.on("-h", "--master_host=VAL"){|val| master_host = val}
+  opt.on("-p", "--master_port=VAL"){|val| master_port = val}
 end
 opt.parse!(ARGV)
 
