@@ -50,7 +50,7 @@ module Fairy
   CONF.DEBUG_PORT_WAIT = false
   CONF.DEBUG_FULL_BACKTRACE = false
   CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-  CONF.DEBUG_MONITOR_ON = true
+  CONF.DEBUG_MONITOR_ON = false
 
 # CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
 # CONF.PROCESS_LIFE_MANAGE_INTERVAL = 10
